--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -1,3 +1,6 @@
+.container
+  min-height: calc(100vh - 80px)
+
 .card
   margin-top: 10px
   border: none
@@ -15,3 +18,7 @@
   a:hover
     text-decoration: underline
 
+
+
+#toast-container > div
+  opacity: 1
