--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,47 +1,52 @@
-<nav class="navbar navbar-light bg-dark">
-  <div class="container-fluid">
-    <h1 style="color: #fff">UserList</h1>
-    <div class="d-flex">
-      <button (click)="clickAddUser()" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-success ">Add User</button>
-      <button routerLink="/login" class="btn btn-danger mx-2">Logout</button>
-    </div>
+<div class="container">
+  <hr>
+  <form [formGroup]="searchValue" class="d-flex">
+    <input formControlName="searchValue"  class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+  </form>
+  <div class="alert alert-danger"
+       *ngIf="searchValue.controls['searchValue'].invalid && searchValue.controls['searchValue'].touched">
+    Please enter request
   </div>
-</nav>
+  <table class="table mt-3">
+    <thead>
+    <tr>
+      <th scope="col">id</th>
+      <th scope="col">FirsName</th>
+      <th scope="col">LastName</th>
+      <th scope="col">Gender</th>
+      <th scope="col">City</th>
+      <th scope="col">Age</th>
+      <th scope="col">Email id</th>
+      <th scope="col">Avatar</th>
+      <th scope="col">Admin</th>
+      <th scope="col">Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let user of userData">
+      <td>{{user.id}}</td>
+      <td>{{user.firstName}}</td>
+      <td>{{user.lastName}}</td>
+      <td>{{user.gender}}</td>
+      <td>{{user.city}}</td>
+      <td>{{user.age}}</td>
+      <td>{{user.email}}</td>
+      <td>
+        <img (click)="userClick(user.id)" style="border-radius: 50%; cursor: pointer" [src]="user.avatar" width="100px" height="100px" alt="No photo added" />
+      </td>
+      <td>{{user.admin}}</td>
+      <td>
+        <button (click)="editUser(user)" class="btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" >Edit</button>
+        <button (click)="deleteUSer(user)" class="btn btn-danger mx-3">Delete</button>
+      </td>
 
-<table class="table mt-3">
-  <thead>
-  <tr>
-    <th scope="col">id</th>
-    <th scope="col">FirsName</th>
-    <th scope="col">LastName</th>
-    <th scope="col">Gender</th>
-    <th scope="col">City</th>
-    <th scope="col">Age</th>
-    <th scope="col">Email id</th>
-    <th scope="col">Avatar</th>
-    <th scope="col">Action</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let user of userData">
-    <td>{{user.id}}</td>
-    <td>{{user.firstName}}</td>
-    <td>{{user.lastName}}</td>
-    <td>{{user.gender}}</td>
-    <td>{{user.city}}</td>
-    <td>{{user.age}}</td>
-    <td>{{user.email}}</td>
-    <td *ngIf="user.avatar">
-      <img [src]="user.avatar" width="100px" height="100px" alt="" />
-    </td>
-    <td>
-      <button (click)="editUser(user)" class="btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" >Edit</button>
-      <button (click)="deleteUSer(user)" class="btn btn-danger mx-3">Delete</button>
-    </td>
+    </tr>
+    </tbody>
+  </table>
+  <button (click)="clickAddUser()" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-success ">Add User</button>
+</div>
 
-  </tr>
-  </tbody>
-</table>
 
 
 <!-- Modal -->
@@ -77,6 +82,13 @@
           <div class="mb-3">
             <label for="exampleInputEmail" class="form-label">Email</label>
             <input type="text" formControlName="email" class="form-control" id="exampleInputEmail">
+          </div>
+
+          <div class="mb-3">
+            <input formControlName="admin" class="form-check-input" type="checkbox" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Admin
+            </label>
           </div>
 
 
